# unit-testing-demo

./: .coveralls.yml  CMakeLists.txt  README.md
debian/: changelog  control  files
src/: CMakeLists.txt  main.cpp
src/func/: func.cpp  func.h
tests/: CMakeLists.txt  main.cpp
tests/func/: ut_func.cpp
